Added missing git tag config to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,9 @@ license          = Perl_5
 copyright_holder = Clinton Gormley
 copyright_year   = 2014
 
+[@Git]
+tag_format = version_%v
+
 [GitHub::Meta]
 repo = clintongormley/ConfigMerge
 
