--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,20 @@ include_dotfiles = 1
 
 [VersionFromModule]
 [AutoPrereqs]
+[Prereqs / Requires]
+Config::Any = 0.07
+File::Spec  = 0
+Storable    = 0
+
+[Prereqs / Recommends]
+Config::General = 0
+Config::Tiny    = 0
+JSON            = 0
+JSON::XS        = 0
+XML::Simple     = 0
+YAML            = 0
+YAML::Syck      = 0
+
 [PruneCruft]
 [ReadmeFromPod]
 [TestRelease]
