Perl 5.20 no longer comes with YAML
Adding to test requirements. Also Config::Any needed

--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,10 @@ XML::Simple     = 0
 YAML            = 0
 YAML::Syck      = 0
 
+[Prereqs / TestRequires ]
+Config::Any     = 0
+YAML            = 0
+
 [PruneCruft]
 [ReadmeFromPod]
 [TestRelease]
